data/derived/sp14/progs/unify/prog0333.ml.out
Characters 29-50:
  let stringOfList f l = "[" ^ (List.map (f "; ") l) ^ "]";;
                               ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type string
